--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node_example",
+  "name": "node_https",
   "version": "1.0.0",
-  "description": "\"simple node example\"",
+  "description": "\"simple node http example\"",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
